--- a/config/database.yml
+++ b/config/database.yml
@@ -19,4 +19,14 @@ development:
 test:
   <<: *default
   database: db/test.sqlite3
+  
+production:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: true
+  database: escamboapp
+  pool: 5
+  username: root
+  password: 123456
+  socket: /var/run/mysqld/mysqld.sock
 
